---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Stash proof of concept
    - Test with a single large cover
    - Nullify asteroid damage via script
    - Revert to per-tile covers to keep collision debug renderer clean
    - Add the cover to newly placed tiles
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 19
  Info:
    - Initial commit