@@ -26,14 +26,11 @@ local function on_created_tile(event)
 
   for _, tile_and_position in ipairs(event.tiles) do
     local position = {tile_and_position.position.x + 0.5, tile_and_position.position.y + 0.5}
-    local cover = surface.find_entity("space-platform-foundation-protective-cover", position)
-    if not cover then
-      cover = surface.create_entity{
-        name = "space-platform-foundation-protective-cover",
-        force = "neutral",
-        position = position,
-      }
-    end
+    local cover = surface.create_entity{
+      name = "space-platform-foundation-protective-cover",
+      force = "neutral",
+      position = position,
+    }
   end
 end
 
