@@ -3,7 +3,7 @@ local cover = {
   name = "space-platform-foundation-protective-cover",
 
   selection_box = {{0, 0}, {0, 0}},
-  collision_box = {{-0.1, -0.1}, {0.1, 0.1}},
+  collision_box = {{0, 0}, {0, 0}},
 
   collision_mask = {layers = {empty_space = true}},
   protected_from_tile_building = false,
