@@ -7,6 +7,7 @@ Date: ????
     - Nullify asteroid damage via script
     - Revert to per-tile covers to keep collision debug renderer clean
     - Add the cover to newly placed tiles
+    - Find entities filtered does not work for entities without a collision box
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 02. 19
